Fixed spanspacing issue

--- a/betway2/src/App.css
+++ b/betway2/src/App.css
@@ -1,8 +1,12 @@
-
 body{  
   margin: 5px;
   overflow: hidden;
   background-color: black;
+}
+
+.spanspacing
+{
+  width: 50%;
 }
 
 wrapper{
